--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         flex: 1;
       }
     </style>
-  <link rel="preload" href="/_expo/static/css/index-dee85766b33e44133b34a0a1f59a2675.css" as="style"><link rel="stylesheet" href="/_expo/static/css/index-dee85766b33e44133b34a0a1f59a2675.css"><link rel="icon" href="/favicon.ico" /></head>
+  <link rel="preload" href="./_expo/static/css/index-dee85766b33e44133b34a0a1f59a2675.css" as="style"><link rel="stylesheet" href="./_expo/static/css/index-dee85766b33e44133b34a0a1f59a2675.css"><link rel="icon" href="./favicon.ico" /></head>
 
   <body>
     <!-- Use static rendering with Expo Router to support running without JavaScript. -->
@@ -32,6 +32,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/_expo/static/js/web/index-9d8e131e394320b3b62353404a53e148.js" defer></script>
+  <script src="./_expo/static/js/web/index-9d8e131e394320b3b62353404a53e148.js" defer></script>
 </body>
 </html>
